--- a/app/views/home/feel.html.erb
+++ b/app/views/home/feel.html.erb
@@ -4,13 +4,17 @@
 
 <div class="genre-top-section" data-turbolinks="false">
   <% @feel.each_with_index do |f, index| %>
-    <div class="hero">
+    <div class="hero" data-turbolinks="false">
       <h3 style="display:inline-block;"><%= f.feel_title %></h3>
        <%= link_to ">>",feel_page_path(f) ,style: "display:inline-block; color:black;" %>
       <div class="swiper" id="swiper<%= index %>">
         <ul class="swiper-wrapper swipes">
-          <% f.events.order("RANDOM()").limit(6).each do |event| %>
-          <li class="swiper-slide" alt=""><img src="assets/catmovie.png"><%= event.event_title %><%= event.user.name %></li>
+          <% f.events.where(publish: true).order("RANDOM()").limit(6).each do |event| %>
+            <li class="swiper-slide" alt="">
+              <%= link_to "/events/#{event.id}",data: {"turbolinks"=>false} do %>
+                <%= render 'home/event_thumbnail',event: event %>
+              <% end %>
+            </li>
           <% end %>
         </ul>
       </div>
