--- a/app/views/home/feel_page.html.erb
+++ b/app/views/home/feel_page.html.erb
@@ -7,66 +7,22 @@
   <% if @event.count == 0 %>
     <p>No event</p>
   <% elsif @event.count <= 6 %>
-    <div class="hero">
-      <div class="swiper" id="swiper0">
-        <ul class="swiper-wrapper swipes">
-          <% @event[0..5].each do |e| %>
-            <li class="swiper-slide" alt=""><img src="/assets/catmovie.png"><%= e.event_title %></li>
-          <% end %>
-        </ul>
-      </div>
-    </div>
+    now less than 6
+    <%= render 'home/event', id: "swiper0",event: @event[0..5] %>
   <% elsif @event.count <= 12 %>
-    <div class="hero">
-      <div class="swiper" id="swiper0">
-        <ul class="swiper-wrapper swipes">
-          <% @event[0..5].each do |e| %>
-            <li class="swiper-slide" alt=""><img src="/assets/catmovie.png"><%= e.event_title %></li>
-          <% end %>
-        </ul>
-      </div>
-    </div>
-    <div class="hero">
-      <div class="swiper" id="swiper1">
-        <ul class="swiper-wrapper swipes">
-          <% @event[6..11].each do |e| %>
-            <li class="swiper-slide" alt=""><img src="/assets/catmovie.png"><%= e.event_title %></li>
-          <% end %>
-        </ul>
-      </div>
-    </div>
+    now less than 12
+    <%= render 'home/event', id: "swiper0",event: @event[0..5] %>
+    <%= render 'home/event', id: "swiper1",event: @event[6..11] %>
   <% else %>
-    <div class="hero">
-      <div class="swiper" id="swiper0">
-        <ul class="swiper-wrapper swipes">
-          <% @event[0..5].each do |e| %>
-            <li class="swiper-slide" alt=""><img src="/assets/catmovie.png"><%= e.event_title %></li>
-          <% end %>
-        </ul>
-      </div>
-    </div>
-    <div class="hero">
-      <div class="swiper" id="swiper1">
-        <ul class="swiper-wrapper swipes">
-          <% @event[6..11].each do |e| %>
-            <li class="swiper-slide" alt=""><img src="/assets/catmovie.png"><%= e.event_title %></li>
-          <% end %>
-        </ul>
-      </div>
-    </div>
-    <div class="hero">
-      <div class="swiper" id="swiper2">
-        <ul class="swiper-wrapper swipes">
-          <% @event[12..17].each do |e| %>
-            <li class="swiper-slide" alt=""><img src="/assets/catmovie.png"><%= e.event_title %></li>
-          <% end %>
-        </ul>
-      </div>
-    </div>
+    now is more than 12
+    <%= render 'home/event', id: "swiper0",event: @event[0..5] %>
+    <%= render 'home/event', id: "swiper1",event: @event[6..11] %>
+    <%= render 'home/event', id: "swiper2",event: @event[12..17] %>
   <% end %>
 </div>
 
-<script>
+
+<script data-turbolinks-eval="false">
   $(document).on('turbolinks:load', function() { 
     class HeroSliders {
       constructor(el) {
@@ -79,7 +35,7 @@
           loop: true,
           grabCursor: true,
           effect: 'slide',
-          slidesPerView: 3.5,
+          slidesPerView: 4.5,
           spaceBetween: 10,
           speed: 1000,
         });
@@ -96,11 +52,24 @@
       }
     }
 
-    const hero0 = new HeroSliders('#swiper0');
-    hero0.start();
-    const hero1 = new HeroSliders('#swiper1');
-    hero1.start();
-    const hero2 = new HeroSliders('#swiper2');
-    hero2.start();
+    let lesson = document.getElementsByClassName("hero");
+
+    if(lesson.length == 1){
+      const hero0 = new HeroSliders('#swiper0');
+      hero0.start();
+    }else if(lesson.length == 2){
+      const hero0 = new HeroSliders('#swiper0');
+      hero0.start();
+      const hero1 = new HeroSliders('#swiper1');
+      hero1.start();
+    }else{
+      const hero0 = new HeroSliders('#swiper0');
+      hero0.start();
+      const hero1 = new HeroSliders('#swiper1');
+      hero1.start();
+      const hero2 = new HeroSliders('#swiper2');
+      hero2.start();
+    }
+
   });
 </script>
