--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,10 +1,11 @@
 <% provide(:title, "MyPage") %>
 
+<% to_pub_events = @to.events.where(publish:true) %>
 
 <div class="my-page-section">
   <div class="profile">
     <div class="profile-img">
-      <% if @to.image_name.size == 0 %>
+      <% if @to.image_name.length == 0 %>
         <%= image_tag "/assets/catman" %>
       <% else %>
         <%= image_tag @to.image_name.url %>
@@ -28,49 +29,111 @@
     <div class="event-container">
       <ul class="tab-menu">
         <li>
-          <a data-id="schedule">
+          <a class="active" data-id="event-list">
+            <%= @to.name %>さんのイベント
+          </a>
+        </li>
+        <li>
+          <a data-id="gest-message-list">
             <%= @to.name %>さんとのメッセージ
           </a>
         </li>
       </ul>
 
-      <ul class="message-list">
-        <% @messages&.each do | message | %>
-          <% if message.user_id == session[:user_id] %>
-            <li style="margin-left:auto; width:fit-content">
-              <div class="message-right">
-                <p class="message"><%= safe_join(message.content.to_s.split("\n"),tag(:br)) %></p>
+      
+      <section class="content active" id="event-list">
+        <% if to_pub_events.count == 0 %>
+          開催予定のイベントはありません
+        <% else %>
+          <% to_pub_events.each do |e|%>
+            <div class="follower_view">
+              <div class="follower">
+                <%= link_to "/events/#{e.id}",data: {"turbolinks"=>false} do %>
+                  <div class="title_date">
+                    <p><%= e.event_title %></p>
+                    <p class="follower-date"><%= e.date %></p>
+                  </div>
+                  <div class="follower-plofile">
+                    <% if e.user.image_name.size == 0 %>
+                      <%= image_tag "/assets/catman" %>
+                    <% else %>
+                      <p><%= e.user.image_name %></p>
+                    <% end %>
+                    <p class="follower-name"><%= e.user.name %></p>
+                  </div>
+                <% end %>
               </div>
-              <p class="posting-time-right"><%= l message.created_at%></p>
-            </li>
-          <% else %>
-            <li>
-              <div class="message-left">
-                <p class="message"><%= safe_join(message.content.to_s.split("\n"),tag(:br)) %></p>
-              </div>
-              <p class="posting-time"><%= l message.created_at%></p>
-            </li>
+            </div>
           <% end %>
         <% end %>
-      </ul>
+      </section>
+      <section class="content" id="gest-message-list">
 
-        
+        <ul class="message-list">
+          <% @messages&.each do | message | %>
+            <% if message.user_id == session[:user_id] %>
+              <% if message.content.present? %>
+                <li style="margin-left:auto; width:fit-content">
+                  <div class="message-right">
+                      <p class="message"><%= safe_join(message.content.to_s.split("\n"),tag(:br)) %></p>
+                    
+                  </div>
+                  <p class="posting-time-right"><%= l message.created_at%></p>
+                  <% if message.image_name.present?  %>
+                    <%= image_tag message.image_name.to_s, class: 'message-image' %>
+                    <p class="posting-time-right"><%= l message.created_at%></p>
+                  <% end %>
+                </li>
+              <% else %>
+                <li style="margin-left:auto; width:fit-content">
+                  <% if message.image_name.present?  %>
+                    <%= image_tag message.image_name.to_s, class: 'message-image' %>
+                    <p class="posting-time-right"><%= l message.created_at%></p>
+                  <% end %>
+                </li>
+              <% end %>
+            <% else %>
+              <% if message.content.present? %>
+                <li>
+                  <div class="message-left">
+                    <p class="message"><%= safe_join(message.content.to_s.split("\n"),tag(:br)) %></p>                
+                  </div>
+                  <p class="posting-time"><%= l message.created_at%></p>
+                  <% if message.image_name.present?  %>
+                    <%= image_tag message.image_name.to_s, class: 'message-image' %>
+                    <p class="posting-time-right"><%= l message.created_at%></p>
+                  <% end %>
+                </li>
+              <% else %>
+                <li>
+                  <% if message.image_name.present?  %>
+                    <%= image_tag message.image_name.to_s, class: 'message-image' %>
+                    <p class="posting-time"><%= l message.created_at%></p>
+                  <% end %>
+                </li>
+              <% end %>
+            <% end %>
+          <% end %>
+        </ul>
 
-      <%= form_for :message, url: message_create_path ,html: {class: "message-form"} do |f| %>
-        <%= f.text_area :content,placeholder: 'メッセージを入力してください' %>
-        <%# <label class="form-image">
-        <span class="image-file">画像</span>
-        <%= f.file_field :image % > %>
+          
 
-        <% if @room %>
-          <input type="hidden" name="message[room]" value="<%= @room.id %>">
-          <input type="hidden" name="message[to_user_id]" value="<%= @to.id %>">
-        <% else %>
-          <input type="hidden" name="message[user_id]" value="<%= current_user.id %>">
-          <input type="hidden" name="message[to_user_id]" value="<%= @to.id %>">
+        <%= form_for @message, url: message_create_path ,html: {class: "message-form"} do |f| %>
+          <%= render 'layouts/error_messages', model: f.object %>
+          <%= f.text_area :content,placeholder: 'メッセージを入力してください' %>
+          <label class="form-image">
+          <span class="image-file">画像</span>
+          <%= f.file_field :image_name %>
+
+          <% if @room %>
+            <input type="hidden" name="message[room]" value="<%= @room.id %>">
+            <input type="hidden" name="message[to_user_id]" value="<%= @to.id %>">
+          <% else %>
+            <input type="hidden" name="message[user_id]" value="<%= current_user.id %>">
+            <input type="hidden" name="message[to_user_id]" value="<%= @to.id %>">
+          <% end %>
+          <%= f.submit "送信する" ,disabled: true ,id: "message-submit" %>
         <% end %>
-        <%= f.submit "送信する" %>
-      <% end %>
       
       </section>
     </div>
@@ -79,8 +142,54 @@
 
 <script>
   $(document).on('turbolinks:load', function() { 
+
+    const menuItems = document.querySelectorAll('.tab-menu li a');
+    const contents = document.querySelectorAll('.content');
+    
+    menuItems.forEach(clickedItem => {
+      clickedItem.addEventListener('click', e => {
+        e.preventDefault();
+
+        menuItems.forEach(item => {
+          item.classList.remove('active');
+        });
+        clickedItem.classList.add('active');
+
+
+        contents.forEach(content => {
+          content.classList.remove('active');
+        });
+
+        document.getElementById(clickedItem.dataset.id).classList.add('active');
+
+      });
+    });
+
+
+
+
+
+
     let messageList = document.querySelector('.message-list');
     messageList.scrollTop = messageList.scrollHeight;
+
+
+    $('textarea').keyup(function(){
+      let textVal = $(this).val();
+      if(textVal.length > 0){
+        $('#message-submit').removeAttr('disabled');
+      } else {
+        $('#message-submit').attr('disabled','disabled');
+      }
+    });
+    $('#message_image_name').click(function(e){
+      e.target.value = '';
+      });
+    $('#message_image_name').change(function(e){
+      $('#message-submit').removeAttr('disabled');
+    });
+
+
   });     
 
 
