--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1607,6 +1607,11 @@ header .global-menu ul a:hover {
   line-height: 50px;
 }
 
+.follower .follow-btn-area {
+  display: inline-block;
+  width: 72%;
+}
+
 .follower a {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1664,6 +1669,7 @@ header .global-menu ul a:hover {
   padding: 2px;
   color: black;
   cursor: pointer;
+  z-index: 5;
 }
 
 .self-event {
@@ -2434,6 +2440,12 @@ header .global-menu ul a:hover {
   height: 57vh;
   overflow-y: scroll;
   padding-right: 13px;
+}
+
+.message-list li {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .message-list .message-left {
