--- a/app/views/users/show_our.html.erb
+++ b/app/views/users/show_our.html.erb
@@ -41,10 +41,12 @@
             <div class="follower_view">
               <% unless user == current_user %>
                 <div class="follower">
-
-                  <%= link_to room_path(current_user.id, user.id),data: {"turbolinks"=>false} do %>
-                    <p class="following-name"><%= user.name %></p><%= render 'users/follow-button', user: user %>
-                  <% end %>
+                  <div class="follow-btn-area">
+                    <%= link_to room_path(current_user.id, user.id),data: {"turbolinks"=>false} do %>
+                      <p class="following-name"><%= user.name %></p>
+                    <% end %>
+                  </div>
+                  <%= render 'users/follow-button', user: user %>
                 </div>
                 <div class="follow-modal hidden">
                   <p><%= user.name %>さんのフォローを解除しますか？</p>
@@ -66,11 +68,13 @@
             <div class="follower_view">
               <% unless user == current_user %>
                 <div class="follower">
-                  <%= link_to room_path(current_user.id, user.id),data: {"turbolinks"=>false} do %>
-                    <p class="following-name"><%= user.name %></p>
-                  
-                    <%= render 'users/follow-button', user: user %>
-                  <% end %>
+                  <div class="follow-btn-area">
+                    <%= link_to room_path(current_user.id, user.id),data: {"turbolinks"=>false} do %>
+                      <p class="following-name"><%= user.name %></p>
+                    
+                    <% end %>
+                  </div>
+                  <%= render 'users/follow-button', user: user %>
                 </div>
                 <div class="follow-modal hidden">
                   <p><%= user.name %>さんのフォローを解除しますか？</p>
