--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,13 @@
 
 <div class="top-section">
   
+<%= @notifications_false.present? %>
+  <%# <% if @notifications.count == 0 % > 
+  unko 
+  <% else % >
+  osikko
+  <% end % > %>
+
   <div class="content-text">
 
 
