--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="top-section">
   
-<%= @notifications_false.present? %>
+<%# <%= @notifications_false.present? % > % >
   <%# <% if @notifications.count == 0 % > 
   unko 
   <% else % >
