--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -88,6 +88,49 @@ button:hover {
   opacity: 0.7;
 }
 
+#header-notification,
+.user-show-notification,
+#user-show-sche-notification,
+.user-show-foll-notification,
+.user-our-notification {
+  margin: 0;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 30;
+}
+
+#header-notification {
+  top: 13px;
+  left: 29px;
+  background-color: khaki;
+}
+
+.user-show-notification {
+  top: 0px;
+  left: 46px;
+  background-color: khaki;
+}
+
+#user-show-sche-notification {
+  top: 2px;
+  right: 22px;
+  background-color: #ec2567;
+}
+
+.user-show-foll-notification {
+  top: 2px;
+  right: 22px;
+  background-color: #ec2567;
+}
+
+.user-our-notification {
+  top: 4px;
+  right: 5px;
+  background-color: #ec2567;
+}
+
 .edit-error {
   color: red;
   font-size: 14px;
@@ -697,6 +740,7 @@ header .status_bar .search_container input[type="submit"]:hover {
 }
 
 header .status_bar .status_bar_right {
+  position: relative;
   height: 60px;
   margin-left: auto;
   width: 340px;
@@ -1499,6 +1543,7 @@ header .global-menu ul a:hover {
 
 .profile div a {
   display: inline-block;
+  position: relative;
 }
 
 .profile div .follow_viewer {
@@ -1556,6 +1601,7 @@ header .global-menu ul a:hover {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  position: relative;
 }
 
 .event-container .tab-menu li a {
@@ -2436,6 +2482,25 @@ header .global-menu ul a:hover {
   z-index: 25;
 }
 
+#gest-message-list {
+  position: relative;
+}
+
+#gest-message-list #message-onload {
+  position: absolute;
+  top: -89px;
+  right: 0px;
+  height: 36px;
+  width: 151px;
+  font-size: small;
+  background: green;
+  border-radius: 6px;
+  border: 2px solid white;
+  -webkit-box-shadow: 0px 0px 1px 0px black;
+  box-shadow: 0px 0px 1px 0px black;
+  line-height: 16px;
+}
+
 .message-list {
   height: 57vh;
   overflow-y: scroll;
@@ -2466,6 +2531,10 @@ header .global-menu ul a:hover {
   width: fit-content;
   margin-left: auto;
   position: relative;
+}
+
+.message-list .message {
+  overflow-wrap: anywhere;
 }
 
 .message-list .posting-time {
